# jlp-coding-challenge2

./: README.md  jlp-coding-challenge2.cabal
app/: Main.hs
src/: Challenge2.hs
test/: Challenge2Spec.hs  Main.hs
