cabal-version: >=1.10
name: jlp-coding-challenge2
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2019 Author name here
maintainer: gareth.rowlands@johnlewis.co.uk
author: Author name here
homepage: https://github.com/githubuser/jlp-coding-challenge2#readme
category: Web
build-type: Simple
extra-source-files:
    README.md
source-repository head
    type: git
    location: https://github.com/githubuser/jlp-coding-challenge2


library
    exposed-modules:
        Challenge2
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        regex-applicative,
        split

executable jlp-coding-challenge2
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        jlp-coding-challenge2 -any

test-suite jlp-coding-challenge2-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules: Challenge2Spec
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        jlp-coding-challenge2,
        hspec,
        hspec-megaparsec,
        megaparsec,
        QuickCheck
